--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 # Automatically generated CODEOWNERS
 # Regenerate with `make update-codeowners`
-draft-ietf-cccamp-wdm-tunnel.md 83043060+aguoietf@users.noreply.github.com
+draft-ietf-cccamp-wdm-tunnel.md aihuaguo.ietf@gmail.com
